# rosrider

./: README.md
rosrider/: package.xml
rosrider_cartographer/: README.md  package.xml
rosrider_cartographer/config/: rosrider_2d.lua  rosrider_2d_gazebo.lua  rosrider_3d.lua  rosrider_3d_gazebo.lua  rosrider_3d_localization.lua
rosrider_cartographer/launch/: carto.launch.py  cartographer.launch.py  cartographer3d.launch.py  cartographer3d_localization.launch.py  occupancy_grid.launch.py  octomap_server.launch.py
rosrider_cartographer/rviz/: rosrider_cartographer.rviz  rosrider_cartographer3d.rviz
rosrider_description/: CMakeLists.txt  README.md  package.xml
rosrider_description/config/: urdf.rviz  urdf_base_link.rviz
rosrider_description/launch/: urdf.launch.py
rosrider_description/meshes/: cam_stand.dae  cam_stand.stl  cam_stand_optical.dae  cam_stand_optical.stl  caretta.dae  caretta_body.dae  caretta_body.stl  duckiebot_body.dae  fximu3e.dae  fximu3e.stl  next.dae  next.stl  next_urdf.dae  next_urdf.stl  rover_wheel_left.dae  rover_wheel_right.dae
rosrider_description/urdf/: beagle.urdf  beagle_front.urdf  caretta.urdf  caretta_gz.urdf  caterpillar.urdf  duckiebot.urdf  duckiebot_gz.urdf  next.urdf  rover.urdf  smurf.urdf  sorcerer.urdf
rosrider_examples/: CMakeLists.txt  package.xml
rosrider_examples/launch/: readme.md
rosrider_image/: CMakeLists.txt  README.md  package.xml
rosrider_image/launch/: april.launch.py  cam.launch.py  image_proc_container.launch.py  libcam.launch.py  rect.launch.py  rectify.launch.py
rosrider_image/param/: apriltag.yaml  cam.yaml  libcam.yaml
rosrider_image/scripts/: apriltag_overlay.py  fix_p_matrix_rect.py
rosrider_interfaces/: CMakeLists.txt  README.md  package.xml
rosrider_interfaces/msg/: Diagnostics.msg
rosrider_nav/: CMakeLists.txt  README.md  package.xml
rosrider_nav/launch/: bringup_keepout.launch.py  bringup_localization.launch.py  bringup_nav2.launch.py  bringup_slam2.launch.py  costmap_filter_info.launch.py  rosrider_keepout.launch.py  rosrider_localization.launch.py  rosrider_localization_gazebo.launch.py  rosrider_nav.launch.py  rosrider_nav_gazebo.launch.py  rosrider_nav_gazebo3d.launch.py  rosrider_nav_mapless.launch.py  rosrider_slam.launch.py
rosrider_nav/map/: house_map.pgm  house_map.yaml  incubator.pgm  salon_map.yaml  willow _mask.pgm  willow.pgm  willow.yaml  willow_mask.pgm  willow_mask.yaml  willow_mask1.pgm
rosrider_nav/param/: keepout_params.yaml  mapper_params_caretta.yaml  nav2_keepout_params_next.yaml  nav2_params_caretta.yaml  nav2_params_gazebo3d_rover.yaml  nav2_params_gazebo_beagle.yaml  nav2_params_gazebo_caretta.yaml  nav2_params_gazebo_next.yaml  nav2_params_gazebo_rover.yaml  nav2_params_mapless_rover.yaml  nav2_params_next.yaml  nav2_params_next_route.yaml  nav2_params_real.yaml
rosrider_nav/rviz/: rosrider_mapless.rviz  rosrider_nav2_default_view.rviz  rosrider_navigation2.rviz
rosrider_nav/scripts/: send_goal.py  send_loop.py  service_call_keepout.py
rosrider_navigation2/: README.md  package.xml
rosrider_navigation2/launch/: bringup_nav.launch.py  bringup_slam.launch.py  costmap_filter_info.launch.py  navigation.launch.py
rosrider_navigation2/map/: house.pgm  house.yaml  incubator.yaml  koridor.pgm  koridor.yaml  koridor_mask.pgm  koridor_mask.yaml  map.yaml  phouse.pgm  phouse.yaml  salon.pgm  salon.yaml  salon_map.pgm  tto.pgm
rosrider_navigation2/param/: nav2_params_caretta.yaml  nav2_params_next.yaml  nav2_params_sorcerer.yaml
rosrider_navigation2/rviz/: rosrider_navigation2.rviz
rosrider_navigation2/scripts/: sendgoal.py
rosrider_node/: CMakeLists.txt  README.md  package.xml
rosrider_node/launch/: ekf.launch.py  rosrider_node.launch.py  state_publisher.launch.py  tf_base_scan.launch.py  tf_fximu.launch.py  ukf.launch.py
rosrider_node/param/: caretta.yaml  duckiebot.yaml  ekf.yaml  ekf_odom_imu.yaml  f710-caretta.config.yaml  next.yaml  sorcerer.yaml  ukf.yaml  ukf_odom_imu.yaml
rosrider_node/src/: encoders.h  i2c_hal.c  i2c_hal.h  (+5 more)
