<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosrider_description</name>
  <version>0.0.1</version>
  <description>
    Robot Description Files for ROSRider project
  </description>
  <maintainer email="can@acada.dev">Can Altineller</maintainer>
  <license>GPLv3</license>
  <url type="website">https://acada.dev</url>
  <url type="repository">https://github.com/acadadev/ROSRider</url>
  <url type="bugtracker">https://github.com/acadadev/ROSRider/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
