<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosrider_image</name>
  <version>0.0.1</version>
  <description>
    ROS2 launch scripts for image processing
  </description> 
  <maintainer email="can@acada.dev">Can Altineller</maintainer>
  <license>GPLv3</license>
  <url type="website">http://rosrider.com</url>
  <url type="repository">https://github.com/acadadev/ROSRider</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
